Oops!  nsStyleSVG never had a GetStyleStructID method.  b=196603